test/fail/ajaxunknownid.app
//Error: Ajax action refers to unknown object with id

application test

section pages

define page home() {
  block[id:= hoi, onclick := action {clear fout <<;}] { "hoi1"} 
}
